added single and dual certificate html

--- a/singleHtml/index.html
+++ b/singleHtml/index.html
@@ -72,19 +72,12 @@
       <span style="position: absolute; font-size: 26px; top: 16px">
         <p>This is to certify</p>
         <section style="line-height: 0.6">
-          <strong>John Doe</strong> has successfully completed the Java tech
-          stack
+          <strong>John Doe</strong> has successfully completed the Java tech stack
           <p>covering UI-Angular-Java Spring-Microservices from</p>
           <p>StackRoute on <strong>23-September-2020.</strong></p>
           <!-- <p>
-            This is to certify that<br />
-            <strong>John Doe</strong><br />
-            has successfully completed the Post Graduate Program in Full Stack
-            Product Engineering conducted by StackRoute during the period 31 jul
-            2020 to 26 feb 2021 and after due assessment & evaluation by the
-            Academic Council of NIIT, is granted the title Stackroute Certified
-            Full Stack product Engineer in java and Angular technology Stack as
-            of<strong> 23-September-2020.</strong>
+            <strong>John Doe</strong><br /> has successfully completed the Post Graduate Program in Full Stack
+            Product Engineering conducted by StackRoute during the period 31 jul 2020 to 26 feb 2021 and after due assessment & evaluation by the Academic Council of NIIT, is granted the title Stackroute Certified Full Stack product Engineer in java and Angular technology Stack as of<strong> 23-September-2020.</strong>
           </p> -->
         </section>
       </span>
