--- a/dualHtml/index.html
+++ b/dualHtml/index.html
@@ -1,75 +1,72 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta
-        name="viewport"
-        content="width=device-width, initial-scale=1.0"
-    >
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Certificate</title>
-    <link
-        href="css/style.css"
-        rel="stylesheet"
-    >
-</head>
-<style>
-    @import url("https://fonts.googleapis.com/css2?family=Khula&display=swap");
+  </head>
+  <style>
+      @import url("https://fonts.googleapis.com/css2?family=Khula&display=swap");
 
-    body {
-        font-family: "Khula", sans-serif;
-        margin: 0;
-    }
+      body {
+          font-family: "Khula", sans-serif;
+          margin: 0;
+      }
 
-    @media print {
-        @page {
-            size: A4 Portrait;
-            margin: 20px 50px;
-        }
-    }
-</style>
+      @media print {
+          @page {
+              size: A4 Portrait;
+              margin: 20px 50px;
+          }
+      }
+  </style>
 
-<body style="height: 100vh">
-
+  <body style="height: 100vh">
+    <!-- Header-->
     <section style="background: #f56a4c; height: 350px">
-        <article style="display: flex; justify-content: space-between">
-            <div></div>
-            <img
-                src="./images/gradcap.png"
-                width="155"
-                height="220"
-                alt=""
-                style="position: relative; top: 20px; left: 18px"
-            />
-            <img
-                src="./images/qrcode.png"
-                width="40"
-                height="40"
-                alt=""
-                style="position: relative; top: 20px; right: 20px"
-            />
-        </article>
-        <article style="display: flex; justify-content: center">
-            <img
-                src="./images/title.png"
-                alt=""
-                style="width: 400px; position: relative; top: 25px"
-            />
-        </article>
+      <article style="display: flex; justify-content: space-between">
+          <div></div>
+          <img
+              src="./images/gradcap.png"
+              width="155"
+              height="220"
+              alt=""
+              style="position: relative; top: 20px; left: 23px"
+          />
+          <img
+              src="./images/qrcode.png"
+              width="36"
+              height="36"
+              alt=""
+              style="
+                position: relative;
+                top: 20px;
+                right: 20px;
+                border: 4px solid white;
+              "
+          />
+      </article>
+      <article style="display: flex; justify-content: center">
+          <img
+              src="./images/title.png"
+              alt=""
+              style="width: 400px; position: relative; top: 25px"
+          />
+      </article>
     </section>
 
+    <!-- Body -->
     <section
         class="watermark"
         style="
-          margin: 10px;
+          margin: 5px 0 10px 0;
           text-align: center;
           position: relative;
           display: flex;
           flex-direction: column;
           align-content: center;
-          align-items: center;
-          max-height: 100%;
+          align-items: center
         "
     >
         <img
@@ -80,70 +77,68 @@
         />
         <span style="
             position: absolute;
-            font-size: clamp(16px, 26px, 30px);
+            font-size: 26px;
             top: 16px;
           ">
-            <p>This is to certify that</p>
-            <div>
-                <!-- <p><strong>John Doe</strong> has successfully completed the Java tech stack</p> -->
-
-                <!-- <p>
-                        <strong>John Doe</strong> has successfully completed the Post
-                        Graduate Program in Full Stack Product Engineering conducted by
-                        StackRoute during the period 31 jul 2020 to 26 feb 2021 and after
-                        due assessment & evaluation by the Academic Council of NIIT, is
-                        granted the title Stackroute Certified Full Stack product Engineer
-                        in java and Angular technology Stack as of<strong>
-                            23-September-2020.</strong>
-                    </p> -->
-
-                <strong>John Doe</strong><br> has successfully completed the Java tech
-                stack
-                <p>covering UI-Angular-Java Spring-Microservices from</p>
-                <p>StackRoute on <strong>23-September-2020.</strong></p>
-                <!-- <p>StackRoute on <strong>23-September-2020.</strong></p> -->
-            </div>
+            <p>This is to certify</p>
+            <section style="line-height: 0.6">
+              <strong>John Doe</strong> has successfully completed the Java tech stack
+              <p>covering UI-Angular-Java Spring-Microservices from</p>
+              <p>StackRoute on <strong>23-September-2020.</strong></p>
+              <!-- <p>
+                <strong>John Doe</strong><br /> has successfully completed the Post Graduate Program in Full Stack
+                Product Engineering conducted by StackRoute during the period 31 jul 2020 to 26 feb 2021 and after due assessment & evaluation by the Academic Council of NIIT, is granted the title Stackroute Certified Full Stack product Engineer in java and Angular technology Stack as of<strong> 23-September-2020.</strong>
+              </p> -->
+            </section>
         </span>
     </section>
 
-    <section style="width:80%;display: flex;justify-content: center;margin: auto;">
-        <div class="qrcodeImage">
-            <img
-                src="./images/qrcode.png"
-                alt=""
-            />
-        </div>
-    </section>
-
-    <section style="display: flex; flex-direction: row; justify-content:space-between;align-items: center;width:80%; margin:auto;">
-        <div class="company-logo-stack">
-            <p>DJ Chadha</p>
-            <p>Executive Vice President & Global Head, Operations</p>
-            <p>NIIT Learning Solutions Limited (Canada)</p>
-            <img
-                src="./images/niitlogo.png"
-                alt=""
-            />
-        </div>
-
-        <div class="company-logo">
-            <p>Edger Aranha</p>
-            <p>Vice President, Human Resources</p>
-            <img
-                src="./images/CGILogo.png"
-                alt=""
-            />
-        </div>
-
-    </section>
-    <section style="display: flex; justify-content: center;">
-        <small style="margin: 10px 0 0 0; font-size: 9px">
-            Verify from here:
-            <a
-                href="http://localhost:5000/verify?url=http://localhost:8000/public/assertions/pB4CgdvlQaaZ120VQXrbpg.json?v=1_1">http://localhost:5000/verify?url=http://localhost:8000/public/assertions/pB4CgdvlQaaZ120VQXrbpg.json?v=1_1</a>
+    <!-- Footer-->
+    <section>
+      <article style="display: flex; flex-direction: column; align-items: center">
+        <img
+          width="60"
+          height="60"
+          src="./images/qrcode.png"
+          style="top: 20px; left: 18px; margin-bottom: 20px; margin-top: 115px"
+          alt=""
+        />
+      </article>
+      <article style="display: flex; justify-content: space-between;">
+        <header>
+          <h4 style="margin-bottom: -10px">DJ Chadha</h4>
+          <p style="margin-top: 0; margin-bottom: -12px; padding: 0;">
+            <small style="font-size: 12px;">Executive Vice President & Global Head, Operations</small>
+          </p>
+          <p style="margin-top: 0; margin-bottom: 20px; padding: 0;">
+            <small style="font-size: 12px;">NIIT Learning Solutions Limited (Canada)</small>
+          </p>
+          <img
+            src="./images/niitlogo.png"
+            alt=""
+            style="width: 100%; height: auto; max-width: 140px;"
+          />
+        </header>
+        <header>
+          <h5 style="margin-bottom: -4px">Edger Aranha</h5>
+          <p style="font-size: 11px; margin-top: 0; margin-bottom: 35px; padding: 0;">
+            <small style="font-size: 12px;">Vice President, Human Resources</small>
+          </p>
+          <img
+            src="./images/CGILogo.png"
+            alt=""
+            style="width: 100%; height: auto; max-width: 125px;"
+          />
+        </header>
+      </article>
+      <article style="display: flex; flex-direction: column; align-items: center">
+        <small style="margin: 55px 0 0 0; font-size: 9px; padding-top: 35px;">
+          <a
+            href="http://localhost:5000/verify?url=http://localhost:8000/public/assertions/pB4CgdvlQaaZ120VQXrbpg.json?v=1_1"
+            >http://localhost:5000/verify?url=http://localhost:8000/public/assertions/pB4CgdvlQaaZ120VQXrbpg.json?v=1_1</a
+          >
         </small>
+      </article>
     </section>
-
-    </div>
-
-</body>
+  </body>
+</html>
