updated single and dual cert

--- a/dual/dual.html
+++ b/dual/dual.html
@@ -7,95 +7,95 @@
     <title>Certificate</title>
   </head>
   <style>
-      @import url("https://fonts.googleapis.com/css2?family=Khula&display=swap");
+    @import url("https://fonts.googleapis.com/css2?family=Khula&display=swap");
 
-      body {
-          font-family: "Khula", sans-serif;
-          margin: 0;
-      }
+    body {
+      font-family: "Khula", sans-serif;
+      margin: 0;
+    }
 
-      @media print {
-          @page {
-              size: A4 Portrait;
-              margin: 20px 50px;
-          }
+    @media print {
+      @page {
+        size: A4 Portrait;
+        margin: 20px 50px;
       }
+    }
   </style>
 
   <body style="height: 100vh">
     <!-- Header-->
     <section style="background: #f56a4c; height: 350px">
       <article style="display: flex; justify-content: space-between">
-          <div></div>
-          <img
-              src="./assets/images/dual/gradcap.png"
-              width="155"
-              height="220"
-              alt=""
-              style="position: relative; top: 20px; left: 23px"
-          />
-          <img
-              src="./assets/images/dual/qrcode.png"
-              width="36"
-              height="36"
-              alt=""
-              style="
-                position: relative;
-                top: 20px;
-                right: 20px;
-                border: 4px solid white;
-              "
-          />
+        <div></div>
+        <img
+          src="./assets/images/dual/gradcap.png"
+          width="155"
+          height="220"
+          alt=""
+          style="position: relative; top: 20px; left: 23px"
+        />
+        <img
+          src="./assets/images/dual/qrcode.png"
+          width="36"
+          height="36"
+          alt=""
+          style="
+            position: relative;
+            top: 20px;
+            right: 20px;
+            border: 4px solid white;
+          "
+        />
       </article>
       <article style="display: flex; justify-content: center">
-          <img
-              src="./assets/images/dual/title.png"
-              alt=""
-              style="width: 400px; position: relative; top: 25px"
-          />
+        <img
+          src="./assets/images/dual/title.png"
+          alt=""
+          style="width: 400px; position: relative; top: 25px"
+        />
       </article>
     </section>
 
     <!-- Body -->
     <section
-        class="watermark"
-        style="
-          margin: 5px 0 10px 0;
-          text-align: center;
-          position: relative;
-          display: flex;
-          flex-direction: column;
-          align-content: center;
-          align-items: center
-        "
+      class="watermark"
+      style="
+        margin: 5px 0 10px 0;
+        text-align: center;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        align-items: center;
+      "
     >
-        <img
-            src="./assets/images/dual/sr_bg_3.png"
-            width="680"
-            height="255"
-            alt=""
-        />
-        <span style="
-            position: absolute;
-            font-size: 26px;
-            top: 16px;
-          ">
-            <p>This is to certify</p>
-            <section style="line-height: 0.2">
-              <strong>John Doe</strong> has successfully completed the Java tech stack
-              <p>covering UI-Angular-Java Spring-Microservices from</p>
-              <p>StackRoute on <strong>23-September-2020.</strong></p>
-              <!-- <p>
+      <img
+        src="./assets/images/dual/sr_bg_3.png"
+        width="680"
+        height="255"
+        alt=""
+      />
+      <span style="position: absolute; font-size: 26px; top: 16px">
+        <p>This is to certify</p>
+        <section style="line-height: 0.2">
+          <strong>John Doe</strong> has successfully completed the Java tech
+          stack
+          <p>covering UI-Angular-Java Spring-Microservices from</p>
+          <p>StackRoute on <strong>23-September-2020.</strong></p>
+          <!-- <p>
                 <strong>John Doe</strong><br /> has successfully completed the Post Graduate Program in Full Stack
                 Product Engineering conducted by StackRoute during the period 31 jul 2020 to 26 feb 2021 and after due assessment & evaluation by the Academic Council of NIIT, is granted the title Stackroute Certified Full Stack product Engineer in java and Angular technology Stack as of<strong> 23-September-2020.</strong>
               </p> -->
-            </section>
-        </span>
+        </section>
+      </span>
     </section>
 
     <!-- Footer-->
     <section>
-      <article style="display: flex; flex-direction: column; align-items: center">
+      <!-- QR Code -->
+      <article
+        style="display: flex; flex-direction: column; align-items: center"
+      >
         <img
           width="60"
           height="60"
@@ -104,35 +104,51 @@
           alt=""
         />
       </article>
-      <article style="display: flex; justify-content: space-between;">
+
+      <article style="display: flex; justify-content: space-between">
         <header>
           <h4 style="margin-bottom: -3px">DJ Chadha</h4>
-          <p style="margin-top: 0; margin-bottom: -5px; padding: 0;">
-            <small style="font-size: 12px;">Executive Vice President & Global Head, Operations</small>
+          <p style="margin-top: 0; margin-bottom: -5px; padding: 0">
+            <small style="font-size: 12px"
+              >Executive Vice President & Global Head, Operations</small
+            >
           </p>
-          <p style="margin-top: 0; margin-bottom: 20px; padding: 0;">
-            <small style="font-size: 12px;">NIIT Learning Solutions Limited (Canada)</small>
+          <p style="margin-top: 0; margin-bottom: 20px; padding: 0">
+            <small style="font-size: 12px"
+              >NIIT Learning Solutions Limited (Canada)</small
+            >
           </p>
           <img
             src="./assets/images/dual/niitlogo.png"
             alt=""
-            style="width: 100%; height: auto; max-width: 140px;"
+            style="width: 100%; height: auto; max-width: 140px"
           />
         </header>
         <header>
           <h5 style="margin-bottom: -3px">Edger Aranha</h5>
-          <p style="font-size: 11px; margin-top: 0; margin-bottom: 35px; padding: 0;">
-            <small style="font-size: 12px;">Vice President, Human Resources</small>
+          <p
+            style="
+              font-size: 11px;
+              margin-top: 0;
+              margin-bottom: 35px;
+              padding: 0;
+            "
+          >
+            <small style="font-size: 12px"
+              >Vice President, Human Resources</small
+            >
           </p>
           <img
             src="./assets/images/dual/CGILogo.png"
             alt=""
-            style="width: 100%; height: auto; max-width: 125px;"
+            style="width: 100%; height: auto; max-width: 125px"
           />
         </header>
       </article>
-      <article style="display: flex; flex-direction: column; align-items: center">
-        <small style="margin: 55px 0 0 0; font-size: 9px; padding-top: 35px;">
+      <article
+        style="display: flex; flex-direction: column; align-items: center"
+      >
+        <small style="margin: 55px 0 0 0; font-size: 9px; padding-top: 35px">
           <a
             href="http://localhost:5000/verify?url=http://localhost:8000/public/assertions/pB4CgdvlQaaZ120VQXrbpg.json?v=1_1"
             >http://localhost:5000/verify?url=http://localhost:8000/public/assertions/pB4CgdvlQaaZ120VQXrbpg.json?v=1_1</a
