--- a/single/single.html
+++ b/single/single.html
@@ -1,136 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Certificate</title>
+  </head>
+  <style>
+    @import url("https://fonts.googleapis.com/css2?family=Khula&display=swap");
 
-<head>
-  <meta charset="UTF-8" />
-  <meta
-    http-equiv="X-UA-Compatible"
-    content="IE=edge"
-  />
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1.0"
-  />
-  <title>Certificate</title>
-</head>
-<style>
-  @import url("https://fonts.googleapis.com/css2?family=Khula&display=swap");
-
-  body {
-    font-family: "Khula", sans-serif;
-    margin: 0;
-  }
-
-  @media print {
-    @page {
-      size: A4 Portrait;
-      margin: 20px 50px;
+    body {
+      font-family: "Khula", sans-serif;
+      margin: 0;
     }
-  }
-</style>
 
-<body style="height: 100vh">
-  <!-- Header-->
-  <section style="background: #0099ff; height: 350px">
-    <article style="display: flex; justify-content: space-between">
-      <div></div>
-      <img
-        src="./assets/images/single/logos-all-01.png"
-        width="155"
-        height="220"
-        alt=""
-        style="position: relative; top: 20px; left: 23px"
-      />
-      <img
-        src="./assets/images/single/qrcode.png"
-        width="36"
-        height="36"
-        alt=""
-        style="
+    @media print {
+      @page {
+        size: A4 Portrait;
+        margin: 20px 50px;
+      }
+    }
+
+    .stackroute--foreground__transparent::before {
+      content: url(./assets/images/single/sr_bg_3.png);
+      position: absolute;
+      z-index: -1;
+      left: 0;
+      width: 100%;
+      height: 335px;
+      top: 0;
+    }
+  </style>
+
+  <body
+    style="
+      height: 100vh;
+      display: grid;
+      grid-template-rows: auto 1fr auto;
+      grid-template-columns: 1fr;
+      grid-template-areas: 'head' 'body' 'foot';
+    "
+  >
+    <!-- Header-->
+    <section style="grid-area: head; background: #0099ff; height: 350px">
+      <article style="display: flex; justify-content: space-between">
+        <div></div>
+        <!-- StackRoute Logo -->
+        <img
+          src="./assets/images/single/logos-all-01.png"
+          width="155"
+          height="220"
+          alt=""
+          style="position: relative; top: 20px; left: 23px"
+        />
+        <!-- QR Code -->
+        <img
+          src="./assets/images/single/qrcode.png"
+          width="36"
+          height="36"
+          alt=""
+          style="
             position: relative;
             top: 20px;
             right: 20px;
             border: 4px solid white;
           "
-      />
-    </article>
-    <article style="display: flex; justify-content: center">
-      <img
-        src="./assets/images/single/title.png"
-        alt=""
-        style="width: 400px; position: relative; top: 25px"
-      />
-    </article>
-  </section>
+        />
+      </article>
+      <!-- Certifed Logo -->
+      <article style="display: flex; justify-content: center">
+        <img
+          src="./assets/images/single/title.png"
+          alt=""
+          style="width: 400px; position: relative; top: 25px"
+        />
+      </article>
+    </section>
 
-  <!-- Body -->
-  <section
-    class="watermark"
-    style="
+    <!-- Body -->
+    <section
+      class="stackroute--foreground__transparent"
+      style="
+        grid-area: body;
         margin: 5px 0 10px 0;
         text-align: center;
         position: relative;
+        font-size: 26px;
+        height: 335px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        padding-left: 40px;
+        padding-right: 40px;
+      "
+    >
+      <!-- <span>
+        This is to certify that <strong>John Doe</strong> has successfully completed the Java tech stack
+        covering UI-Angular-Java Spring-Microservices from StackRoute on <strong>23-September-2020.</strong>
+      </span> -->
+
+      <span>
+        This is to certify that <strong>John Doe</strong> <br />
+        has successfully completed the Post Graduate Program in Full Stack
+        Product Engineering conducted by StackRoute during the period 31 Jul
+        2020 to 26 Feb 2021 and after due assessment & evaluation by the
+        Academic Council of NIIT, is granted the title Stackroute Certified Full
+        Stack product Engineer in java and Angular technology Stack as of<strong>
+          23-September-2020.</strong>
+      </span>
+    </section>
+
+    <!-- Footer-->
+    <section
+      style="
+        grid-area: foot;
         display: flex;
         flex-direction: column;
-        align-content: center;
         align-items: center;
-        height: 335px;
-
       "
-  >
-    <img
-      src="./assets/images/single/sr_bg_3.png"
-      width="680"
-      height="255"
-      alt=""
-    />
-    <span style="position: absolute; font-size: 26px;height: 300px;">
-      <p>This is to certify</p>
-      <section style="line-height:0.8;display:flex;flex-direction: column;justify-content: center;align-items: center">
-        <span><strong>John Doe</strong> has successfully completed the Java tech stack</span><br>
-        <span>covering UI-Angular-Java Spring-Microservices from</span><br>
-        <span>StackRoute on <strong>23-September-2020.</strong></span>
-        <!-- <p>
-            <strong>John Doe</strong><br /> has successfully completed the Post Graduate Program in Full Stack
-            Product Engineering conducted by StackRoute during the period 31 jul 2020 to 26 feb 2021 and after due assessment & evaluation by the Academic Council of NIIT, is granted the title Stackroute Certified Full Stack product Engineer in java and Angular technology Stack as of<strong> 23-September-2020.</strong>
-          </p> -->
-      </section>
-    </span>
-  </section>
-
-  <!-- Footer-->
-  <section style="display: flex; flex-direction: column; align-items: center">
-    <img
-      width="75"
-      height="75"
-      src="./assets/images/single/qrcode.png"
-      style="top: 20px; left: 18px; margin-bottom: 20px"
-      alt=""
-    />
-    <img
-      width="200"
-      height="125"
-      src="./assets/images/single/sign-dir.png"
-      style="top: 20px; left: 18px;"
-      alt=""
-    />
-    <header>
-      <h5 style="margin-bottom: -3px">Ramanujam Thirumalai</h5>
-      <small style="font-size: 11px">Sr. VP, StackRoute</small>
-    </header>
-    <img
-      width="175"
-      height="75"
-      src="./assets/images/single/Stack-route.png"
-      style="top: 20px; left: 18px; margin-top: 5px"
-      alt=""
-    />
-    <small style="margin: 0; font-size: 9px">
-      Verify from here:
-      <a
-        href="http://localhost:5000/verify?url=http://localhost:8000/public/assertions/pB4CgdvlQaaZ120VQXrbpg.json?v=1_1">http://localhost:5000/verify?url=http://localhost:8000/public/assertions/pB4CgdvlQaaZ120VQXrbpg.json?v=1_1</a>
-    </small>
-  </section>
-</body>
-
+    >
+      <!-- QR Code -->
+      <img
+        width="75"
+        height="75"
+        src="./assets/images/single/qrcode.png"
+        style="top: 20px; left: 18px; margin-bottom: 20px"
+        alt=""
+      />
+      <!-- Signature -->
+      <img
+        width="200"
+        height="125"
+        src="./assets/images/single/sign-dir.png"
+        style="top: 20px; left: 18px"
+        alt=""
+      />
+      <!-- Authority Name and Designation -->
+      <header>
+        <h5 style="margin-bottom: -3px">Ramanujam Thirumalai</h5>
+        <small style="font-size: 11px">Sr. VP, StackRoute</small>
+      </header>
+      <!-- StackRoute Logo -->
+      <img
+        width="175"
+        height="75"
+        src="./assets/images/single/Stack-route.png"
+        style="top: 20px; left: 18px; margin-top: 5px"
+        alt=""
+      />
+      <!-- URL -->
+      <small style="margin: 0; font-size: 9px">
+        Verify from here:
+        <a
+          href="http://localhost:5000/verify?url=http://localhost:8000/public/assertions/pB4CgdvlQaaZ120VQXrbpg.json?v=1_1"
+          >http://localhost:5000/verify?url=http://localhost:8000/public/assertions/pB4CgdvlQaaZ120VQXrbpg.json?v=1_1</a
+        >
+      </small>
+    </section>
+  </body>
 </html>
